# gold-miner

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/menu/: mod.rs  utils.rs
src/model/: communication.rs  foreman.rs  logger.rs  map.rs  miner.rs  mod.rs  model_tests.rs  statistics.rs  system.rs  utils.rs
src/model/menu/: mod.rs  utils.rs
src/utils/: extension.rs  logger.rs  mod.rs  utils.rs
