[package]
name = "TP2"
version = "0.1.0"
authors = ["cristianrana <cristian.rana8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
rand = "0.7.2"
chrono = "0.4.9"
csv = "1.1.1"
serde_derive = "1.0.103"
serde = "1.0.103"
